force-app/main/default/objects/Opportunity/fields/Age_of_customer__c.field-meta.xml
<CustomField>
    <fullName>Age_of_customer__c</fullName>
    <formula>Account.Age_of_Customer__c</formula>
    <label>Age of customer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>