force-app/main/default/objects/Opportunity/fields/AgeingOfBookingWeekly__c.field-meta.xml
<CustomField>
    <fullName>AgeingOfBookingWeekly__c</fullName>
    <formula>IF( MOD( AgeingOfBooking__c ,7) = 0 , 
MOD( FLOOR( AgeingOfBooking__c / 7) ,52)+0 , 
MOD( FLOOR( AgeingOfBooking__c / 7) ,52)+1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AgeingOfBookingWeekly</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>