force-app/main/default/objects/Opportunity/fields/AgeingWeekly__c.field-meta.xml
<CustomField>
    <fullName>AgeingWeekly__c</fullName>
    <formula>MOD( AgeingOfBooking__c ,7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AgeingWeekly</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>