force-app/main/default/objects/Opportunity/fields/Agreement_Value_for_brokers__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Value_for_brokers__c</fullName>
    <label>Agreement Value for brokers</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>