force-app/main/default/objects/Opportunity/fields/Allocation_Manager__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Manager__c</fullName>
    <label>Allocation Manager</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DIRECT</fullName>
            </value>
            <value>
                <fullName>A Aamir Solanki</fullName>
            </value>
            <value>
                <fullName>A Abhishek Dani</fullName>
            </value>
            <value>
                <fullName>A Gargi Pawar</fullName>
            </value>
            <value>
                <fullName>A Hanan Kashmiri</fullName>
            </value>
            <value>
                <fullName>Anand Nikam</fullName>
            </value>
            <value>
                <fullName>A Neha Balani</fullName>
            </value>
            <value>
                <fullName>A Parth Gohil</fullName>
            </value>
            <value>
                <fullName>A Pranali Dicholkar</fullName>
            </value>
            <value>
                <fullName>A Priyanka Tripathi</fullName>
            </value>
            <value>
                <fullName>A Priyank Soni</fullName>
            </value>
            <value>
                <fullName>A Rohit Jain</fullName>
            </value>
            <value>
                <fullName>A Rohit Sonvaniya</fullName>
            </value>
            <value>
                <fullName>A Shoaib Sayed</fullName>
            </value>
            <value>
                <fullName>A Shreeram Raghunathan</fullName>
            </value>
            <value>
                <fullName>A Tejas Bhatt</fullName>
            </value>
            <value>
                <fullName>A Tushar Baghele</fullName>
            </value>
            <value>
                <fullName>A Vinay Rao</fullName>
            </value>
            <value>
                <fullName>Preeti Parab</fullName>
            </value>
            <value>
                <fullName>Shweta Mulekar</fullName>
            </value>
            <value>
                <fullName>Varnika Makwana</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>