force-app/main/default/objects/Opportunity/fields/Alternative_Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Mobile_No__c</fullName>
    <formula>(&quot;XXXXX&quot;&amp;right(RW_Secondary_Mobile_No__c,5))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Mobile No</label>
    <type>Text</type>
</CustomField>