force-app/main/default/objects/Opportunity/fields/Amenities_Compliance_with_Customer_Prefe__c.field-meta.xml
<CustomField>
    <fullName>Amenities_Compliance_with_Customer_Prefe__c</fullName>
    <label>Unit Selected</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>