force-app/main/default/objects/Opportunity/fields/Anarock_sourcing_manager__c.field-meta.xml
<CustomField>
    <fullName>Anarock_sourcing_manager__c</fullName>
    <label>Anarock sourcing manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A Aditya Sankpal</fullName>
            </value>
            <value>
                <fullName>Aakash Chavan</fullName>
            </value>
            <value>
                <fullName>Aakash Rajesh Tripathi</fullName>
            </value>
            <value>
                <fullName>A Amit Sachde</fullName>
            </value>
            <value>
                <fullName>Aantra Saini</fullName>
            </value>
            <value>
                <fullName>Aashima Sheikh</fullName>
            </value>
            <value>
                <fullName>Aastha Tripathi</fullName>
            </value>
            <value>
                <fullName>Aayushi Saha</fullName>
            </value>
            <value>
                <fullName>Aayush Kumar</fullName>
            </value>
            <value>
                <fullName>Aayush Solanki</fullName>
            </value>
            <value>
                <fullName>Abhijeet Maskar</fullName>
            </value>
            <value>
                <fullName>Abhijit Karande</fullName>
            </value>
            <value>
                <fullName>Abhik Nandy</fullName>
            </value>
            <value>
                <fullName>Abhishek Arora</fullName>
            </value>
            <value>
                <fullName>Abhishek Dani</fullName>
            </value>
            <value>
                <fullName>Abhishek Jain</fullName>
            </value>
            <value>
                <fullName>Abin John</fullName>
            </value>
            <value>
                <fullName>A Bushra Shaikh</fullName>
            </value>
            <value>
                <fullName>A Deepak Dubey</fullName>
            </value>
            <value>
                <fullName>A Dikshant Wankhede</fullName>
            </value>
            <value>
                <fullName>Aditya Sankpal</fullName>
            </value>
            <value>
                <fullName>Adnan Kazi</fullName>
            </value>
            <value>
                <fullName>A Harendra Sharma</fullName>
            </value>
            <value>
                <fullName>A Harshal Randhive</fullName>
            </value>
            <value>
                <fullName>A Jagruti More</fullName>
            </value>
            <value>
                <fullName>A Janki Singh</fullName>
            </value>
            <value>
                <fullName>Ajay Bakhru</fullName>
            </value>
            <value>
                <fullName>Ajay Gupta</fullName>
            </value>
            <value>
                <fullName>Ajay Singh</fullName>
            </value>
            <value>
                <fullName>Ajit Sond</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>