force-app/main/default/objects/Opportunity/fields/Block_Unit_ID__c.field-meta.xml
<CustomField>
    <fullName>Block_Unit_ID__c</fullName>
    <label>Block Unit ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>