force-app/main/default/objects/Opportunity/fields/Blocking_Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Blocking_Amount_Received__c</fullName>
    <label>Blocking Amount Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>