force-app/main/default/objects/Opportunity/fields/Booking1__c.field-meta.xml
<CustomField>
    <fullName>Booking1__c</fullName>
    <formula>Booking__r.Name</formula>
    <label>Booking</label>
    <type>Text</type>
</CustomField>