force-app/main/default/objects/Opportunity/fields/Booking_Feedback_Link__c.field-meta.xml
<CustomField>
    <fullName>Booking_Feedback_Link__c</fullName>
    <label>Booking Feedback Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>