force-app/main/default/objects/Opportunity/fields/Brokerage_amount__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_amount__c</fullName>
    <formula>Brokerage_percentage__c *  Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brokerage amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>