force-app/main/default/objects/Opportunity/fields/Brokerage_percentage__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_percentage__c</fullName>
    <label>Brokerage percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>