force-app/main/default/objects/Opportunity/fields/Budget_In_Cr__c.field-meta.xml
<CustomField>
    <fullName>Budget_In_Cr__c</fullName>
    <label>Budget(In Cr)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>