force-app/main/default/objects/Opportunity/fields/Callback_Aging__c.field-meta.xml
<CustomField>
    <fullName>Callback_Aging__c</fullName>
    <formula>IF( Last_CRM_Call_Subject__c == &apos;Call Back&apos;, TODAY() - DATEVALUE( Last_CRM_Call_Attempt_Date__c ) , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Callback Aging</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>