force-app/main/default/objects/Opportunity/fields/Channel_Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Channel Partner Account)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>