force-app/main/default/objects/Opportunity/fields/Checklist_Date__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Date__c</fullName>
    <label>Checklist Date</label>
    <type>Date</type>
</CustomField>