force-app/main/default/objects/Opportunity/fields/Client_Type__c.field-meta.xml
<CustomField>
    <fullName>Client_Type__c</fullName>
    <label>Client Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>Decision Maker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>