force-app/main/default/objects/Opportunity/fields/Closing_type__c.field-meta.xml
<CustomField>
    <fullName>Closing_type__c</fullName>
    <label>Closing type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abhik Nandy</fullName>
            </value>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Loyalty</fullName>
            </value>
            <value>
                <fullName>Ninad Gade</fullName>
            </value>
            <value>
                <fullName>NRI</fullName>
            </value>
            <value>
                <fullName>Outstation</fullName>
            </value>
            <value>
                <fullName>Presales</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Sanjana Rajpurohit</fullName>
            </value>
            <value>
                <fullName>Sanjana Singh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>