force-app/main/default/objects/Opportunity/fields/ClusterLookup__c.field-meta.xml
<CustomField>
    <fullName>ClusterLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cluster</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RW_Project__c</field>
            <operation>equals</operation>
            <valueField>Cluster__c.Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Cluster__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>