force-app/main/default/objects/Opportunity/fields/Company_Location__c.field-meta.xml
<CustomField>
    <fullName>Company_Location__c</fullName>
    <label>Company Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>