force-app/main/default/objects/Opportunity/fields/Corporate__c.field-meta.xml
<CustomField>
    <fullName>Corporate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corporate</label>
    <referenceTo>Corporates__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>