force-app/main/default/objects/Opportunity/fields/Cost_Description__c.field-meta.xml
<CustomField>
    <fullName>Cost_Description__c</fullName>
    <label>Cost Description</label>
    <type>TextArea</type>
</CustomField>