force-app/main/default/objects/Opportunity/fields/CreateDate__c.field-meta.xml
<CustomField>
    <fullName>CreateDate__c</fullName>
    <formula>CreatedDate</formula>
    <label>CreateDate</label>
    <type>Date</type>
</CustomField>