force-app/main/default/objects/Opportunity/fields/CRM_Manager__c.field-meta.xml
<CustomField>
    <fullName>CRM_Manager__c</fullName>
    <label>CRM Manager</label>
    <length>60</length>
    <type>Text</type>
</CustomField>