force-app/main/default/objects/Opportunity/fields/CRM_Remarks__c.field-meta.xml
<CustomField>
    <fullName>CRM_Remarks__c</fullName>
    <label>CRM Remarks</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>