force-app/main/default/objects/Opportunity/fields/Customer_Reference__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Reference</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>