force-app/main/default/objects/Opportunity/fields/Customer_Reference_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reference_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Reference Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities (Customer Reference Opportunity)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>