force-app/main/default/objects/Opportunity/fields/Date_of_Possesion__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Possesion__c</fullName>
    <label>Date of Possesion</label>
    <type>Date</type>
</CustomField>