force-app/main/default/objects/Opportunity/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <formula>Text(Account.RW_Designation__c)</formula>
    <label>Designation</label>
    <type>Text</type>
</CustomField>