force-app/main/default/objects/Opportunity/fields/Development__c.field-meta.xml
<CustomField>
    <fullName>Development__c</fullName>
    <formula>RW_Project__r.Segment_Lookup__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segment</label>
    <type>Text</type>
</CustomField>