force-app/main/default/objects/Opportunity/fields/Employee_Reference__c.field-meta.xml
<CustomField>
    <fullName>Employee_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Walkin Employee Reference</label>
    <referenceTo>RW_Employee__c</referenceTo>
    <relationshipLabel>Opportunities (Walkin Employee Reference)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>