force-app/main/default/objects/Opportunity/fields/Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity__c</fullName>
    <formula>TEXT(Account.RW_Ethnicity__c)</formula>
    <label>Ethnicity</label>
    <type>Text</type>
</CustomField>