force-app/main/default/objects/Opportunity/fields/Expected_Date_of_Closure1__c.field-meta.xml
<CustomField>
    <fullName>Expected_Date_of_Closure1__c</fullName>
    <formula>CreatedDate+ 45</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Date of Closure</label>
    <type>Date</type>
</CustomField>