force-app/main/default/objects/Opportunity/fields/First_Call_Attempt_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Call_Attempt_Date__c</fullName>
    <label>First Call Attempt Date</label>
    <type>DateTime</type>
</CustomField>