force-app/main/default/objects/Opportunity/fields/First_CRM_Call_Attempt_Status__c.field-meta.xml
<CustomField>
    <fullName>First_CRM_Call_Attempt_Status__c</fullName>
    <label>First CRM Call Attempt Status</label>
    <type>TextArea</type>
</CustomField>