force-app/main/default/objects/Opportunity/fields/First_CRM_Call_Attempted_by__c.field-meta.xml
<CustomField>
    <fullName>First_CRM_Call_Attempted_by__c</fullName>
    <label>First CRM Call Attempted by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>