force-app/main/default/objects/Opportunity/fields/First_Sales_Call_Description__c.field-meta.xml
<CustomField>
    <fullName>First_Sales_Call_Description__c</fullName>
    <label>First Sales Call Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>