force-app/main/default/objects/Opportunity/fields/First_Time_Task_Assigned__c.field-meta.xml
<CustomField>
    <fullName>First_Time_Task_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Time Task Assigned</label>
    <type>Checkbox</type>
</CustomField>