force-app/main/default/objects/Opportunity/fields/Five_Minutes_Delay__c.field-meta.xml
<CustomField>
    <fullName>Five_Minutes_Delay__c</fullName>
    <label>Five Minutes Delay</label>
    <type>DateTime</type>
</CustomField>