force-app/main/default/objects/Opportunity/fields/Four_Wheeler__c.field-meta.xml
<CustomField>
    <fullName>Four_Wheeler__c</fullName>
    <label>Four Wheeler</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>