force-app/main/default/objects/Opportunity/fields/FV_Application_ID__c.field-meta.xml
<CustomField>
    <fullName>FV_Application_ID__c</fullName>
    <label>FV Application ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>