force-app/main/default/objects/Opportunity/fields/FV_Booked_Amount__c.field-meta.xml
<CustomField>
    <fullName>FV_Booked_Amount__c</fullName>
    <label>FV Booked Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>