force-app/main/default/objects/Opportunity/fields/FV_Booked_Date__c.field-meta.xml
<CustomField>
    <fullName>FV_Booked_Date__c</fullName>
    <label>FV Booked Date</label>
    <type>Date</type>
</CustomField>