force-app/main/default/objects/Opportunity/fields/FV_Booked_ID__c.field-meta.xml
<CustomField>
    <fullName>FV_Booked_ID__c</fullName>
    <label>FV Booked ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>