force-app/main/default/objects/Opportunity/fields/FV_Cancellation_Flag__c.field-meta.xml
<CustomField>
    <fullName>FV_Cancellation_Flag__c</fullName>
    <label>FV Cancellation Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>