force-app/main/default/objects/Opportunity/fields/FV_Cancelled_Date__c.field-meta.xml
<CustomField>
    <fullName>FV_Cancelled_Date__c</fullName>
    <label>FV Cancelled Date</label>
    <type>Date</type>
</CustomField>